[package]
name = "hyperv_agent"
version = "0.3.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
regex = "1"
crossterm = "0.28.1"
openssl = { version = "0.10.69", features = ["vendored"] }
